Support custom ACME providers (#620)
* feat: support custom ACME providers

Any RFC 8555 CA via acme.<n>.* config (EAB kid/hmac supported,
validated at parse time), per-certificate provider selection,
per-provider account keys. Let's Encrypt stays default with the
legacy account key.

Closes #536

* fix: harden ACME failure handling in renewal loop

CA rejections (stale orders, malformed responses) and unexpected
local failures bump the cert attempts and fall back to a fresh
order; network errors, rate limits and CA outages retry in the same
state. Order polls fetch once per cycle. Policy lives in
AcmeFailureClassifier with fast pure unit tests.

* fix: harden store and certificate update safety

HerdDB duplicate keys are typed, so real database failures now
propagate instead of masking as duplicates; secrets are masked in
configuration save logs. A failed configuration apply restores the
previously stored certificate row, and the UI blocks submits until
the provider list is available.

* fix: publish reload state atomically

All reload-dependent state (key size, checker IPs, clients,
certificate cache) publishes together only after loading succeeds.
Store failures in the renewal loop are logged and retried next
cycle instead of burning attempts as CA rejections.